err/blazecommandhelper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BlazeCommandHelper-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/BlazeUtils-0.5.3.dist-info'...
Listing './lib/python3.5/site-packages/blazech'...
Listing './lib/python3.5/site-packages/blazech/actions'...
Compiling './lib/python3.5/site-packages/blazech/actions/__init__.py'...
***   File "./lib/python3.5/site-packages/blazech/actions/__init__.py", line 74
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blazech/application.py'...
***   File "./lib/python3.5/site-packages/blazech/application.py", line 64
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blazech/commands.py'...
***   File "./lib/python3.5/site-packages/blazech/commands.py", line 36
    except _AbortCommand, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blazech/config.py'...
***   File "./lib/python3.5/site-packages/blazech/config.py", line 86
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/blazech/lib'...
Compiling './lib/python3.5/site-packages/blazech/lib/ConfigParser.py'...
***   File "./lib/python3.5/site-packages/blazech/lib/ConfigParser.py", line 244
    raise ValueError, 'Invalid section name: %s' % section
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blazech/lib/__init__.py'...
***   File "./lib/python3.5/site-packages/blazech/lib/__init__.py", line 63
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/blazech/tests'...
Listing './lib/python3.5/site-packages/blazech/tests/cmdapp'...
Compiling './lib/python3.5/site-packages/blazech/tests/cmdapp/__init__.py'...
***   File "./lib/python3.5/site-packages/blazech/tests/cmdapp/__init__.py", line 15
    print 'local baz'
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/blazech/tests/cmdapp/commands.py'...
***   File "./lib/python3.5/site-packages/blazech/tests/cmdapp/commands.py", line 7
    print 'entry-point bar'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/blazech/tests/cmdapp/entry_points.py'...
***   File "./lib/python3.5/site-packages/blazech/tests/cmdapp/entry_points.py", line 7
    print 'entry-point foo'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/blazech/tests/test_configs.py'...
***   File "./lib/python3.5/site-packages/blazech/tests/test_configs.py", line 49
    except ConfigError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blazech/tests/test_logging.py'...
***   File "./lib/python3.5/site-packages/blazech/tests/test_logging.py", line 18
    except ConfigError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/blazeutils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/wrapt'...
Listing './lib/python3.5/site-packages/wrapt-1.10.11.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
